--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     // for permissions
     implementation 'com.karumi:dexter:6.2.3'
+    // otp
+    implementation 'com.github.appsfeature:otp-view:1.1'
+
 }
