--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.qaim.qaim"
         minSdk 23
         targetSdk 34
-        versionCode 21
-        versionName "2.1"
+        versionCode 22
+        versionName "2.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -67,7 +67,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.21'
 
-
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     // When using the BoM, you don't specify versions in Firebase library dependencies
@@ -85,4 +84,5 @@ dependencies {
     // otp
     implementation 'com.github.appsfeature:otp-view:1.1'
     implementation 'androidx.biometric:biometric:1.2.0-alpha05'
+    implementation 'com.github.maayyaannkk:ImagePicker:1.2.5'
 }
